syntax = "proto3";

option csharp_namespace = "UserServiceGrpc.Protos";

package UserServiceGrpc;

service IUserService
{
 rpc GetUser(UserRequest) returns (User);
}

message UserRequest {
    int32 userId = 1;
}

message User {
    int32 userId = 1;
    string username = 2;
}

message Empty {}